templates/ingress.yaml
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes
  namespace: default
  annotations:
    kubernetes.io/ingress.class: apiserver
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: ${cluster_dns}
    http:
      paths:
      - backend:
          serviceName: kubernetes
          servicePort: 443
  tls:
  - hosts:
    - ${cluster_dns}
